--- a/wrr/styles/styles.css
+++ b/wrr/styles/styles.css
@@ -1,3 +1,23 @@
 #content {
     max-width: 1600px;
     margin: 0 auto}
+
+#nav{
+    text-align: center
+}
+
+#a{
+    text-align: center
+}
+
+#hero-msg h1, #hero-msg h4{
+    text-align: center
+}
+
+#button-box{
+    text-align: center
+}
+
+#main {
+    text-align: center
+}
