--- a/wrr/styles/styles.css
+++ b/wrr/styles/styles.css
@@ -2,22 +2,27 @@
     max-width: 1600px;
     margin: 0 auto}
 
-#nav{
+nav a{
     text-align: center
 }
 
-#a{
+#hero-msg h1{
     text-align: center
 }
 
-#hero-msg h1, #hero-msg h4{
+#hero-msg h4{
     text-align: center
 }
 
-#button-box{
+.button-box{
     text-align: center
 }
 
-#main {
+main section {
     text-align: center
 }
+
+#background {
+    height: 725px;
+}
+ 
