--- a/wrr/styles/styles.css
+++ b/wrr/styles/styles.css
@@ -3,14 +3,13 @@
     margin: 0 auto}
 
 nav a{
-    text-align: center
+    text-align: center;
+    color: purple;
+    text-decoration: none;
+
 }
 
-#hero-msg h1{
-    text-align: center
-}
-
-#hero-msg h4{
+#hero-msg h1,#hero-msg h4{
     text-align: center
 }
 
@@ -24,5 +23,79 @@ main section {
 
 #background {
     height: 725px;
+    background-color: #022F40 
 }
  
+
+body{
+    background-color: #fcfbfb; 
+}
+header{
+    background-color:rgba(20,30,13, .7);
+}
+nav a:hover{
+    background-color:rgba(20,30,13, .7);
+    color: black
+}
+.book, .join{
+    background-color: red;
+    color: white;
+    text-decoration: none;
+
+}
+.book:hover, .join:hover{
+    background-color: #38AECC;
+    color: black
+
+}
+.msg{
+    background-color: #022F40
+}
+footer{
+    background-color: #0090C1;
+}
+
+.home-title{
+    color: black 
+}
+h4{
+    color: black  
+}
+.msg h2{
+    color: black  
+}
+.msg p{
+    color: black 
+}
+footer h3{
+    color: black 
+}
+footer a{
+    color: purple ;
+    text-decoration: none;
+}
+footer a:hover{
+    color: black 
+}
+
+
+#logo{
+    width: 80px;
+}
+
+.icon{
+    width: 80px; 
+}
+
+
+#hero-img{
+    width: 100%;
+}
+
+footer p {
+    font-size: 1.2em;
+} 
+
+footer p a:hover {
+    text-decoration: underline;
+} 
