--- a/wrr/styles/styles.css
+++ b/wrr/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&family=Rock+Salt&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto}
@@ -6,7 +8,7 @@ nav a{
     text-align: center;
     color: purple;
     text-decoration: none;
-
+    padding: 35px;
 }
 
 #hero-msg h1,#hero-msg h4{
@@ -18,20 +20,37 @@ nav a{
 }
 
 main section {
-    text-align: center
+    text-align: center;
+    font-size: 22px;
+}
+main section img {
+    box-sizing: border-box;
 }
 
 #background {
     height: 725px;
     background-color: #022F40 
 }
- 
+.headline{
+    font-family:Roboto Slab, Helvetica, sans-serif; 
+
+}
 
 body{
     background-color: #fcfbfb; 
+    font-family:Roboto Slab, Helvetica, sans-serif; 
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+
 }
+h2 {
+    margin: 0;
+}
+ 
 header{
     background-color:rgba(20,30,13, .7);
+    font-family:Roboto Slab, Helvetica, sans-serif;
 }
 nav a:hover{
     background-color:rgba(20,30,13, .7);
@@ -41,6 +60,10 @@ nav a:hover{
     background-color: red;
     color: white;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 
 }
 .book:hover, .join:hover{
@@ -49,14 +72,21 @@ nav a:hover{
 
 }
 .msg{
-    background-color: #022F40
+    background-color: #022F40;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer{
     background-color: #0090C1;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 .home-title{
-    color: black 
+    color: black ;
+    font-size: 2em;
+    margin-top: 10px;
+
 }
 h4{
     color: black  
@@ -65,7 +95,9 @@ h4{
     color: black  
 }
 .msg p{
-    color: black 
+    color: black ;
+    font-size: .8em;
+    padding: 35px;
 }
 footer h3{
     color: black 
@@ -82,9 +114,12 @@ footer a:hover{
 .logo{
     width: 80px;
 }
-
+#logo_link {
+    padding-top: 5px;
+}
 .icon{
     width: 80px; 
+    padding-top: 10px;
 }
 
 
@@ -99,3 +134,14 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 } 
+footer .social img{
+    padding-top: 15px;
+}
+
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 20x solid #d9c2a3;
+}
